--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impact IQ - Intelligent Data Solutions</title>
+    <title>Impact IQ - Be smarter with every change</title>
     <style>
         * {
             margin: 0;
@@ -264,8 +264,8 @@
             <div class="logo">
                 <img src="https://github.com/user-attachments/assets/436670cb-9aec-4ae9-8a5c-ace341ff9283" alt="Impact IQ Logo" />
             </div>
-            <div class="logo-subtitle">Intelligent Data Solutions</div>
-            <p class="tagline">Powerful tools for data analysis, visualization, and business intelligence. Choose the solution that fits your needs.</p>
+            <div class="logo-subtitle">Be smarter with every change</div>
+            <p class="tagline"></p>
             <div class="free-badge">100% Free & Open Source</div>
         </header>
 
