--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="product-icon">📊</div>
                 <h2 class="product-title">Impact IQ</h2>
                 <span class="product-badge">Core Platform</span>
-                <p class="product-description">1-click deployment with PowerShell support for comprehensive Power BI management.</p>
+                <p class="product-description">1-click • Any User • Any Computer • Any Workspace</p>
                 <ul class="product-features">
                     <li>1-click & PowerShell deployment</li>
                     <li>Works with legacy & PBIR formats</li>
