--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h1>Power BI Governance & Impact Analysis</h1>
+            <h1>Governance & Impact Analysis for Power BI + Fabric</h1>
             <p class="hero-subtitle">Be smarter with every change</p>
             <p class="hero-description">
                 Know exactly what's used and where, what might break, and back it all up. 
