--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                 <!-- Impact IQ Local -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ-Local" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">💻</div>
-                    <h2 class="solution-title">Impact IQ Local</h2>
+                    <h2 class="solution-title">Impact IQ - Local</h2>
                     <div class="solution-badge-container">
                         <span class="solution-badge">Local-Only</span>
                     </div>
@@ -804,13 +804,13 @@
                         <li>Air-gapped environments</li>
                         <li>No environment/metadata review</li>
                     </ul>
-                    <span class="solution-cta">Explore Local →</span>
+                    <span class="solution-cta">Explore Local Edition →</span>
                 </a>
 
                 <!-- Impact IQ Semantic Link Labs -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ-SemanticLinkLabs" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">🔗</div>
-                    <h2 class="solution-title">Impact IQ Semantic Link Labs</h2>
+                    <h2 class="solution-title">Impact IQ - Semantic Link Labs</h2>
                     <div class="solution-badge-container">
                         <span class="solution-badge">Cloud Automation</span>
                     </div>
@@ -822,7 +822,7 @@
                         <li>PBIR format only</li>
                         <li>Fabric-native workflows</li>
                     </ul>
-                    <span class="solution-cta">Explore SemanticLinkLabs →</span>
+                    <span class="solution-cta">Explore Semantic Link Labs Edition →</span>
                 </a>
 
                 <!-- Impact IQ Tenant Admin -->
@@ -840,7 +840,7 @@
                         <li>Advanced admin controls</li>
                         <li>Tenant-wide governance</li>
                     </ul>
-                    <span class="solution-cta">Explore Tenant Admin →</span>
+                    <span class="solution-cta">Explore Tenant Admin Edition →</span>
                 </a>
             </div>
         </div>
