--- a/index.html
+++ b/index.html
@@ -729,8 +729,8 @@
                     <div class="feature-icon">📊</div>
                     <h3 class="feature-title">Environment Overview</h3>
                     <p class="feature-description">
-                        Complete Power BI environment details via REST API. See all workspaces, 
-                        reports, and datasets in one place.
+                        Power BI & Fabric environment details via the REST API. See metadata related to your workspaces, 
+                        reports, models, and all other Fabric Items in one place.
                     </p>
                 </div>
                 <div class="feature-card">
@@ -780,11 +780,12 @@
                     </div>
                     <p class="solution-description">1-click • Any User • Any Computer • Any Workspace</p>
                     <ul class="solution-features">
-                        <li>1-click & PowerShell deployment</li>
-                        <li>Works with legacy & PBIR formats</li>
-                        <li>Environment review capabilities</li>
+                        <li>1-click deployment</li>
+                        <li>No admin permissions required on computer</li>
+                        <li>Works with legacy & PBIR report formats</li>
+                        <li>Only member access required on workspaces/li>
                         <li>Metadata extraction & analysis</li>
-                        <li>Quick setup and configuration</li>
+                        <li>Auto opens Power BI Model/Report</li>
                     </ul>
                     <span class="solution-cta">Explore Impact IQ →</span>
                 </a>
@@ -798,11 +799,10 @@
                     </div>
                     <p class="solution-description">Fully local solution for offline Power BI analysis without environment connectivity.</p>
                     <ul class="solution-features">
-                        <li>100% local deployment</li>
-                        <li>No internet required</li>
-                        <li>Complete data privacy</li>
-                        <li>Air-gapped environments</li>
-                        <li>No environment/metadata review</li>
+                        <li>Run on local files</li>
+                        <li>Works with legacy and PBIR report formats</li>
+                        <li>No Admin rights required</li>
+                        <li>No workspace access required</li>
                     </ul>
                     <span class="solution-cta">Explore Local Edition →</span>
                 </a>
@@ -820,7 +820,7 @@
                         <li>100% automated to lakehouse</li>
                         <li>Semantic link integration</li>
                         <li>PBIR format only</li>
-                        <li>Fabric-native workflows</li>
+                        <li>Works with Fabric Pipelines</li>
                     </ul>
                     <span class="solution-cta">Explore Semantic Link Labs Edition →</span>
                 </a>
@@ -835,10 +835,10 @@
                     <p class="solution-description">Enhanced platform with all core features plus workspace permissions and metadata management.</p>
                     <ul class="solution-features">
                         <li>All 1-click features included</li>
-                        <li>Workspace permission grants</li>
-                        <li>Permission-based metadata</li>
-                        <li>Advanced admin controls</li>
-                        <li>Tenant-wide governance</li>
+                        <li>Permission grants to all workspaces</li>
+                        <li>Admin REST API metadata</li>
+                        <li>User Permissions breakdown</li>
+                        <li>Usage Activity</li>
                     </ul>
                     <span class="solution-cta">Explore Tenant Admin Edition →</span>
                 </a>
