--- a/index.html
+++ b/index.html
@@ -783,9 +783,9 @@
                         <li>1-click deployment</li>
                         <li>No admin permissions required on computer</li>
                         <li>Works with legacy & PBIR report formats</li>
-                        <li>Only member access required on workspaces/li>
-                        <li>Metadata extraction & analysis</li>
-                        <li>Auto opens Power BI Model/Report</li>
+                        <li>Only member access required on workspaces</li>
+                        <li>Workspace metadata extraction & analysis</li>
+                        <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
                     <span class="solution-cta">Explore Impact IQ →</span>
                 </a>
@@ -803,6 +803,7 @@
                         <li>Works with legacy and PBIR report formats</li>
                         <li>No Admin rights required</li>
                         <li>No workspace access required</li>
+                        <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
                     <span class="solution-cta">Explore Local Edition →</span>
                 </a>
@@ -821,6 +822,7 @@
                         <li>Semantic link integration</li>
                         <li>PBIR format only</li>
                         <li>Works with Fabric Pipelines</li>
+                        <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
                     <span class="solution-cta">Explore Semantic Link Labs Edition →</span>
                 </a>
@@ -839,6 +841,7 @@
                         <li>Admin REST API metadata</li>
                         <li>User Permissions breakdown</li>
                         <li>Usage Activity</li>
+                        <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
                     <span class="solution-cta">Explore Tenant Admin Edition →</span>
                 </a>
