--- a/index.html
+++ b/index.html
@@ -918,26 +918,26 @@
                 <div class="footer-section">
                     <h3>Solutions</h3>
                     <ul class="footer-links">
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ" target="_blank">Impact IQ Core</a></li>
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ-Local" target="_blank">Impact IQ Local</a></li>
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ-SemanticLinkLabs" target="_blank">SemanticLinkLabs</a></li>
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ-TenantAdmin" target="_blank">Tenant Admin</a></li>
+                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ" target="_blank">Impact IQ</a></li>
+                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ-Local" target="_blank">Impact IQ - Local</a></li>
+                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ-SemanticLinkLabs" target="_blank">Impact IQ - Semantic Link Labs</a></li>
+                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ-TenantAdmin" target="_blank">Impact IQ - Tenant Admin</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Resources</h3>
                     <ul class="footer-links">
-                        <li><a href="https://github.com/BeSmarterWithData" target="_blank">GitHub Organization</a></li>
+                        <li><a href="https://github.com/BeSmarterWithData" target="_blank">GitHub</a></li>
                         <li><a href="https://github.com/BeSmarterWithData/Power_BI_Governance_Presentation" target="_blank">Presentation</a></li>
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ/issues" target="_blank">Support</a></li>
+                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ/issues" target="_blank">Issue Support</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Community</h3>
                     <ul class="footer-links">
                         <li><a href="https://github.com/BeSmarterWithData" target="_blank">GitHub</a></li>
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ/discussions" target="_blank">Discussions</a></li>
-                        <li><a href="https://github.com/BeSmarterWithData/ImpactIQ/blob/main/CONTRIBUTING.md" target="_blank">Contributing</a></li>
+                        <li><a href="https://www.reddit.com/user/BeSmarterWithData" target="_blank">Reddit</a></li>
+                        <li><a href="https://www.linkedin.com/in/chriscusumano/" target="_blank">LinkedIn</a></li>
                     </ul>
                 </div>
             </div>
