--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                     <div class="solution-badge-container">
                         <span class="solution-badge">Local-Only</span>
                     </div>
-                    <p class="solution-description">Analyze local PBIX/PBIT reports and models without workspace access required</p>
+                    <p class="solution-description">Local solution for offline PBIX/PBIT reports and models in development</p>
                     <ul class="solution-features">
                         <li>Run on local files</li>
                         <li>Works with legacy and PBIR report formats</li>
