--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                     </div>
                     <p class="solution-description">Local solution for offline PBIX/PBIT reports and models in development</p>
                     <ul class="solution-features">
-                        <li>Run on local files</li>
+                        <li>Analyize local files with 1 click</li>
                         <li>Works with legacy and PBIR report formats</li>
                         <li>No Admin rights required</li>
                         <li>No workspace access required</li>
