--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                 <!-- Impact IQ Core -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">📊</div>
-                    <h2 class="solution-title">Impact IQ</h2>
+                    <h2 class="solution-title">Impact IQ<span class="solution-edition">1-Click</span></h2>
                     <div class="solution-badge-container">
                         <span class="solution-badge">Core Platform</span>
                     </div>
