--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             display: block;
             font-size: 1.25rem;
             font-weight: 600;
-            color: #475569;
+            color: #5D3FD3;
             margin-top: 0.1rem;
         }
 
@@ -775,7 +775,7 @@
             <div class="section-header">
                 <h2 class="section-title">Choose Your Impact IQ Solution</h2>
                 <p class="section-subtitle">
-                    Four specialized solutions to match your specific Power BI governance needs
+                    Five specialized solutions to match your specific Power BI & Fabric governance needs
                 </p>
             </div>
             <div class="solutions-grid">
