--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             display: block;
             font-size: 1.25rem;
             font-weight: 600;
-            color: #5D3FD3;
+            color: #1F3A5F;
             margin-top: 0.1rem;
         }
 
