--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
 
         .solution-edition {
             display: block;
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: #1F3A5F;
+            font-size: 1.40rem;
+            font-weight: 625;
+            color: #475569;
             margin-top: 0.1rem;
         }
 
@@ -775,7 +775,7 @@
             <div class="section-header">
                 <h2 class="section-title">Choose Your Impact IQ Solution</h2>
                 <p class="section-subtitle">
-                    Five specialized solutions to match your specific Power BI & Fabric governance needs
+                    Four specialized solutions to match your specific Power BI governance needs
                 </p>
             </div>
             <div class="solutions-grid">
