--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             background: linear-gradient(135deg, #10b981 0%, #059669 100%);
             color: white;
             border-radius: 20px;
-            font-size: 0.85rem;
+            font-size: 1.2rem;
             font-weight: 600;
             margin-bottom: 1rem;
             box-shadow: 0 4px 8px rgba(16, 185, 129, 0.2);
@@ -782,9 +782,9 @@
                 <!-- Impact IQ Core -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">📊</div>
-                    <h2 class="solution-title">Impact IQ<span class="solution-edition">1-Click</span></h2>
+                    <h2 class="solution-title">Impact IQ</h2>
                     <div class="solution-badge-container">
-                        <span class="solution-badge">Core Platform</span>
+                        <span class="solution-badge">1-Click</span>
                     </div>
                     <p class="solution-description">1-click • Any User • Any Computer • Any Workspace</p>
                     <ul class="solution-features">
@@ -801,9 +801,9 @@
                 <!-- Impact IQ Local -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ-Local" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">💻</div>
-                    <h2 class="solution-title">Impact IQ<span class="solution-edition">Local</span></h2>
+                    <h2 class="solution-title">Impact IQ</h2>
                     <div class="solution-badge-container">
-                        <span class="solution-badge">Local-Only</span>
+                        <span class="solution-badge">Local</span>
                     </div>
                     <p class="solution-description">Local solution for offline PBIX/PBIT reports and models in development</p>
                     <ul class="solution-features">
@@ -819,9 +819,9 @@
                 <!-- Impact IQ Semantic Link Labs -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ-SemanticLinkLabs" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">🔗</div>
-                    <h2 class="solution-title">Impact IQ<span class="solution-edition">Semantic Link Labs</span></h2>
+                    <h2 class="solution-title">Impact IQ</h2>
                     <div class="solution-badge-container">
-                        <span class="solution-badge">Cloud Automation</span>
+                        <span class="solution-badge">Semantic Link Labs</span>
                     </div>
                     <p class="solution-description">Cloud-based solution with full automation into Fabric lakehouses for modern workflows.</p>
                     <ul class="solution-features">
@@ -838,9 +838,9 @@
                 <!-- Impact IQ Service Principal -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ-ServicePrincipal" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">🤖</div>
-                    <h2 class="solution-title">Impact IQ<span class="solution-edition">Service Principal</span></h2>
+                    <h2 class="solution-title">Impact IQ</h2>
                     <div class="solution-badge-container">
-                        <span class="solution-badge">Unattended Automation</span>
+                        <span class="solution-badge">Service Principal</span>
                     </div>
                     <p class="solution-description">Automated solution designed for unattended execution using Service Principal authentication.</p>
                     <ul class="solution-features">
@@ -857,9 +857,9 @@
                 <!-- Impact IQ Tenant Admin -->
                 <a href="https://github.com/BeSmarterWithData/ImpactIQ-TenantAdmin" class="solution-card" target="_blank" rel="noopener noreferrer">
                     <div class="solution-icon">⚙️</div>
-                    <h2 class="solution-title">Impact IQ<span class="solution-edition">Tenant Admin</span></h2>
+                    <h2 class="solution-title">Impact IQ</h2>
                     <div class="solution-badge-container">
-                        <span class="solution-badge">Enterprise Admin</span>
+                        <span class="solution-badge">Tenant Admin</span>
                     </div>
                     <p class="solution-description">Enhanced platform with all core features plus workspace permissions and metadata management.</p>
                     <ul class="solution-features">
