--- a/index.html
+++ b/index.html
@@ -460,11 +460,11 @@
             text-decoration: none;
             display: block;
             margin-top: auto;
-            padding: 0.75rem 1.25rem;
+            padding: 0.75rem 1rem;
             font-weight: 650;
             transition: all 0.3s ease;
             text-align: center;
-            font-size: clamp(0.75rem, 2.25vw, 0.75rem);
+            font-size: 0.7rem
             letter-spacing: 0.5px;
             text-transform: uppercase;
             border-radius: 8px;
