--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                         <li>Workspace metadata extraction & analysis</li>
                         <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
-                    <span class="solution-cta">Explore Impact IQ →</span>
+                    <span class="solution-cta">Try Impact IQ →</span>
                 </a>
 
                 <!-- Impact IQ Local -->
@@ -815,7 +815,7 @@
                         <li>No workspace access required</li>
                         <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
-                    <span class="solution-cta">Explore Local Edition →</span>
+                    <span class="solution-cta">Try Local Edition →</span>
                 </a>
 
                 <!-- Impact IQ Semantic Link Labs -->
@@ -834,7 +834,7 @@
                         <li>Works with Fabric Pipelines</li>
                         <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
-                    <span class="solution-cta">Explore Semantic Link Labs Edition →</span>
+                    <span class="solution-cta">Try Semantic Link Labs Edition →</span>
                 </a>
 
                 <!-- Impact IQ Service Principal -->
@@ -853,7 +853,7 @@
                         <li>Fully automated execution</li>
                         <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
-                    <span class="solution-cta">Explore Service Principal Edition →</span>
+                    <span class="solution-cta">Try Service Principal Edition →</span>
                 </a>
 
                 <!-- Impact IQ Tenant Admin -->
@@ -872,7 +872,7 @@
                         <li>Usage Activity</li>
                         <li>Includes Power BI Model/Report for full breakdown</li>
                     </ul>
-                    <span class="solution-cta">Explore Tenant Admin Edition →</span>
+                    <span class="solution-cta">Try Tenant Admin Edition →</span>
                 </a>
             </div>
         </div>
