--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             font-weight: 650;
             transition: all 0.3s ease;
             text-align: center;
-            font-size: 0.7rem
+            font-size: clamp(0.7rem, 2.2vw, 0.7rem);
             letter-spacing: 0.5px;
             text-transform: uppercase;
             border-radius: 8px;
